# open-zaak-new

./: .bumpversion.cfg  .gitignore  Dockerfile  INSTALL.rst  README.md  README.rst  bootstrap.py  docker-compose.yml  dotenv.example  package-lock.json  package.json  pyproject.toml  queries.sql  setup.cfg
.github/workflows/: ci.yml  code-quality.yml
_os_api/: README.EN.rst  README.rst
_os_api/dotgithub/workflows/: oas.yml
_os_api/src/openzaak_new/templates/: index.html
_os_api/src/openzaak_new/templates/includes/: footer.html
_os_generic/docs/: conf.py
_os_generic/docs/introduction/: team.rst
_os_generic/docs/introduction/open-source/: index.rst
docker/: init-db.sql
docs/: testing.rst
docs/coding_style/: backend.rst  frontend.rst
docs/deployment/: VHOSTS.rst
docs/general/: index.rst
docs/install/: dev.rst
performance_test/: locust.conf  test_locust.py
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt
src/: manage.py
src/openzaak_new/: __init__.py  setup.py  urls.py  wsgi.py
src/openzaak_new/accounts/: __init__.py  apps.py
src/openzaak_new/accounts/migrations/: 0001_initial.py
src/openzaak_new/accounts/tests/: test_hijacking.py
src/openzaak_new/components/: urls.py
src/openzaak_new/components/catalogi/: apps.py
src/openzaak_new/components/catalogi/api/: serializers.py  urls.py  viewsets.py
src/openzaak_new/components/catalogi/migrations/: 0001_initial.py
src/openzaak_new/components/catalogi/models/: __init__.py  zaaktype.py
src/openzaak_new/components/zaken/: apps.py  constants.py  models.py
src/openzaak_new/components/zaken/api/: serializers.py  urls.py  viewsets.py
src/openzaak_new/components/zaken/management/commands/: bulk_create.py  bulk_update.py
src/openzaak_new/components/zaken/migrations/: 0001_initial.py  0002_zaak_omschrijving.py  0003_zaak_uuid.py  0004_zaak_archiefnominatie_zaak_archiefstatus_and_more.py  0005_zaak_archiefactiedatum_zaak_created_on_and_more.py  0006_zaak_opdrachtgevende_organisatie_and_more.py  0007_zaak_zaakgeometrie.py  0008_zaak_communicatiekanaal_zaak_selectielijstklasse_and_more.py  0009_zaak_producten_of_diensten.py  0010_zaak_hoofdzaak.py  0011_zaak__zaaktype_zaak__zaaktype_base_url_and_more.py  0012_zaak_bronorganisatie_zaak_identificatie.py
src/openzaak_new/conf/: base.py  ci.py  dev.py  jenkins.py  local_example.py  test.py
src/openzaak_new/templates/: master.html
src/openzaak_new/utils/: __init__.py  apps.py  middleware.py
src/openzaak_new/utils/tests/: test_validators.py
